@@ -18,6 +18,8 @@ CORE COMMANDS
 - onleave command, executing something as soon as the current procedure
   returns. With no arguments it returns the script set, with one appends
   the onleave script. There should be a way to reset.
+- List commands to add: [lreverse], [squeeze]
+- Set commands: [lunion], [lintersect], and [ldifference]
 
 COMMANDS NOT IN TCL BUT THAT SHOULD BE IN JIM
 
