@@ -1,3 +1,7 @@
+2005-03-14 08:22  antirez
+
+	* ChangeLog, TODO, jim.c: [lmap] command.
+
 2005-03-13 18:43  antirez
 
 	* ChangeLog, jim.h: Max nesting depth modified to 10000
